# .bsrc

./: .bdx.0090.n.gpgize_all.sh  .bdx.0100.y.process_gpgized_files.sh  .bdx.0210.n.degpgize_all.sh  README.md
benchmark/: _
benchmark/src.gpgizeme/cache_bmt/: .README  10.test_log
benchmark/src.gpgizeme/cache_bmt/00.task_mgmt/: .bdx.0100.y.test_start.sh  .unlock.sh
benchmark/src.gpgizeme/cache_bmt/00.task_mgmt/conf/: .bdx.0100.y.blktrace.sh
benchmark/src.gpgizeme/cache_bmt/21.cache_sw/: veloerr.txt
benchmark/src.gpgizeme/cache_bmt/31.filebench/: ..fb_exec_core.sh  ..fb_testcase_mgmt.sh  .bdx.0100.y.run_cache_test.sh  .run_test.sh
benchmark/src.gpgizeme/cache_bmt/31.filebench/.mnt/: sdc2
benchmark/src.gpgizeme/cache_bmt/42.iostat/: .bdx.0100.y.iostat.sh  .testlock.iowa
benchmark/src.gpgizeme/cache_bmt/43.sar/: .bdx.0100.y.sar_collect.sh
benchmark/src.gpgizeme/cache_bmt/44.freemem_stat/: .bdx.0100.y.freemem_stat.sh
benchmark/src.gpgizeme/cache_bmt/49.cache_stat/: .bdx.0100.y.cache_stat.sh  log
benchmark/src.gpgizeme/filebench/bmt_fb.v01/: ..run_fb.sh  .bdx.0100.y.exec_filebench_and_tracing.sh
benchmark/src.gpgizeme/fio/: .bdx.0100.y.get_source_fio.sh
benchmark/src.gpgizeme/fio/.files/: fio_test_d.20140123.tgz.asc.bz2
benchmark/src.gpgizeme/fio/fio_test_d.20140123/: README
benchmark/src.gpgizeme/iometer/iometer.bver-20130503_173429/: .bdx.0060.y.check_whoami.sh  .bdx.0070.y.install_basic_utils.sh  .bdx.0080.y.install_cmake.sh  .bdx.0090.y.install_vcproj2cmake.sh  .bdx.0100.y.convert_vcproj_to_makefile.sh  .usr-share-cmake-modules
benchmark/src.gpgizeme/iozone/bmtest/: bsc.bmtest.iozone.sh  bsc.bmtest.mkdir_general.sh  bsc.bmtest.mkdir_testsuite.sh
benchmark/src.gpgizeme/tpc_bmt/: hammerora-2.11-ubuntu1204.tgz
benchmark/src.gpgizeme/uflip/: .bdx.0100.y.uflip_testenv_create.sh  .bdx.0100.y.uflip_testsuite_init.sh  .uflip_src_root  _UFLIP_TEST_
benchmark/src.gpgizeme/uflip/.dirs/: .uflip_src_root
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130503_104927/src/: Makefile.am  genBench.h  input.c  microbench.c  output.c  rndFormat.c  seqFormat.h  uflip_device.h
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130503_104927/src/os/: Makefile.am  functions.h  linux.c.orig  posix_timer.c
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130508_221312/: Doxyfile.in  Makefile.am
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130508_221312/data/: .bdx.0100.y.execute_uflip.sh
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130508_221312/data/scripts/: setup.py
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130508_221312/src/: microbench.h  rndFormat.h  seqFormat.c  uflip_random.c  uflip_results.c
benchmark/src.gpgizeme/uflip/.dirs/flashio-2.2.99.2-bver_20130508_221312/src/os/: Makefile.in  linux.c
benchmark/src.gpgizeme/uflip/.files/: flashio-2.2.99.2-bver_20120703_2149.tgz  flashio-2.2.99.2-bver_20130503_104927.tgz
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/: AUTHORS  ChangeLog  Doxyfile  Makefile.in  README  configure  configure.ac
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/data/: .bdx.0100.y.execute_uflip.sh  ExpPlan.txt  ExpSel.txt  FlashIO  _Vizu_V3.xls  clean.py  setup.py
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/data/plans/: ExpPlan.txt  ExpSel.txt
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/data/scripts/: setup.py
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/src/: Makefile.in  blocAlloc.c  blocAlloc.h  genBench.c  input.h  main.c  output.h  uflip_device.c  uflip_params.c  uflip_params.h  uflip_random.h  uflip_results.h  uflip_timer.c  uflip_timer.h
benchmark/src.gpgizeme/uflip/flashio-2.2.99.2-bver_20120703_2149/src/os/: dummy.c  win32.c
benchmark/src.gpgizeme/uflip/uflip_testsuite-20120703/: .bdx.0100.y.uflip_testsuite_init.sh  .bdx.0200.n.uflip_testsuite_clean.sh
blkcache/src.gpgizeme/_cache_bmt/tpcc/: .README_20120827_020717
blkcache/src.gpgizeme/facebook_flashcache.skel/: .bdx.0100.y.git_clone_flashcache.sh
blkcache/src.gpgizeme/linux_dmcache/cachectrl/: dmcache_ctrl_create.sh  dmcache_ctrl_status.sh
data_placement/src.gpgizeme/_cache_bmt/tpcc/: 00.test_result_dir
data_placement/src.gpgizeme/btier/: .git-clone.sh  btier
data_placement/src.gpgizeme/btier/btier-0.9.9.8/: Changelog  Makefile  btier.h  btier_common.c  btier_common.h  btier_log.h  btier_main.c  btier_main.h  btier_setup.1  btier_setup.c  btier_sysfs.c
data_placement/src.gpgizeme/linux_bcache.skel/: .bdx.0100.y.git_clone_bcache.sh
data_placement/src.gpgizeme/linux_dmcache/: .bdx.0100.y.mk_dmcache_patched_kernel.sh  .dm_cache.patch-3.0.8
data_placement/src.gpgizeme/linux_dmcache/.files/: dm-cache.tgz
data_placement/src.gpgizeme/linux_dmcache/cachectrl/: .bdx.0100.y.install_dmcache_ctrl_files.sh  dmcache_ctrl_remove.sh
examples/src.gpgizeme/device_mapper/: dm_ex_01.sh  dm_ex_02.sh  dmtab.txt
ftrace/: .bdx.0100.y.edit_n_exec_ftrace.sh  set_ftrace_filter.cfg  testcmd.sh  tracing
ioi/src.gpgizeme/: README
ioi/src.gpgizeme/.archive/: iowa_workbench-20121120_225445.tgz  iowm-20121005_224757.tgz  iowm-20121008_021924.tgz  iowm-20121018_020328.tgz
ioi/src.gpgizeme/iowa/: page_cache_size_ctl.tgz
ioi/src.gpgizeme/iowa/iowa.acsptrn_outlook/: .bdx.0100.y.iowa_start.sh
ioi/src.gpgizeme/iowa/trace.filebench/: .bdx.0100.y.test_main.sh  .tconf.sh  50.tdir
ioi/src.gpgizeme/iowm/: Makefile  iowm.c  iowm.h  iowm_workload.h  main.c
ioi/src.gpgizeme/iowm/te/: func_ptr.c  te.c
kvstore/src.gpgizeme/fawn_kv.skel/: .bdx.0100.y.git_clone__fawn_kv.sh
python/src.gpgizeme/: iowa.aid
python/src.gpgizeme/20121120_003532--cal_hitfreq_per_item/: item_freq.1-good.py  word_count-good.py
python/src.gpgizeme/20121224_191501--freq_item_set/: te01.py
python/src.gpgizeme/20130108_184344--cache_lru/: cache_lru-01.py  cache_lru-02.py  cache_lru.py  log
python/src.gpgizeme/20130108_214421--iowa__access_interval_distribution/: infile  iowa_aid.20130108_215906.py  iowa_aid.py
(+243 files in other folders)
